crates/naos-core/tests/fixtures/conformance/rejected/prop-type-mismatch.wc.tsx
export function PropTypeMismatch({ count = "many" }: { count?: number } = {}) {
  return <span>{count}</span>
}
